@@ -16,6 +16,7 @@ import com.iamalexvybornyi.passportmanagementsystem.util.IdGeneratorUtil;
 import com.iamalexvybornyi.passportmanagementsystem.validation.CommonFieldValidationUtil;
 import lombok.AllArgsConstructor;
 import lombok.NonNull;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.lang.Nullable;
 import org.springframework.stereotype.Service;
 
@@ -24,8 +25,8 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @AllArgsConstructor
 public class PersonService {
@@ -48,6 +49,7 @@ public class PersonService {
         commonFieldValidationUtil.verifyCreatePersonDtoForBusinessRequirements(createPersonDto);
         final Person person = personConverter.createPersonDtoToPerson(createPersonDto);
         person.setId(idGeneratorUtil.generatePersonId());
+        log.debug("Adding the person {} to the repository", person);
         personRepository.save(person);
         return personConverter.personToPersonDto(person);
     }
@@ -56,16 +58,19 @@ public class PersonService {
     public List<PersonDto> getPersons(@Nullable String passportNumber) {
         final List<PersonDto> personDtoList = new ArrayList<>();
         if (passportNumber != null && !passportNumber.isEmpty()) {
+            log.debug("Finding people by passport number {}", passportNumber);
             final PersonDto personDto = personConverter.personToPersonDto(personRepository.findByPassportNumber(passportNumber));
             if (personDto != null) {
                 personDtoList.add(personDto);
             }
         } else {
+            log.debug("Getting all people from the repository");
             personRepository.findAll().forEach(person -> personDtoList.add(personConverter.personToPersonDto(person)));
         }
         return personDtoList;
     }
 
+    @NonNull
     public PersonDto getPerson(@NonNull String id) {
         final Person personFromRepo = this.getPersonById(id);
         return personConverter.personToPersonDto(personFromRepo);
@@ -77,7 +82,8 @@ public class PersonService {
         final Person personFromRepo = this.getPersonById(id);
         personFromRepo.setName(createPersonDto.getName());
         personFromRepo.setBirthCountry(createPersonDto.getBirthCountry());
-        personFromRepo.setBirthDate(LocalDate.parse(createPersonDto.getBirthDate(), DateTimeFormatter.ofPattern("dd-MM-yyyy")));
+        personFromRepo.setBirthDate(LocalDate.parse(createPersonDto.getBirthDate(), DateTimeFormatter.ofPattern("yyyy-MM-dd")));
+        log.debug("Adding the person data to {} by id {}", personFromRepo, id);
         personRepository.save(personFromRepo);
         return personConverter.personToPersonDto(personFromRepo);
     }
@@ -85,39 +91,31 @@ public class PersonService {
     @NonNull
     public PassportDto addPersonPassport(@NonNull String id, @NonNull CreatePassportDto createPassportDto) {
         commonFieldValidationUtil.verifyCreatePassportDtoForBusinessRequirements(null, createPassportDto);
-        final Person personFromRepo = this.getPersonById(id);
-        List<Passport> personPassports = personFromRepo.getPassports();
-        if (personPassports == null) {
-            personPassports = new ArrayList<>();
-        }
 
-        final Passport passport = passportConverter.createPassportDtoToPassport(createPassportDto);
+        final Passport passport = passportConverter.createPassportDtoToPassport(createPassportDto, id);
         passport.setId(idGeneratorUtil.generatePassportId());
+        log.debug("Adding the passport {} to the person with id {}", passport, id);
         passportRepository.save(passport);
 
-        personPassports.add(passport);
-        personFromRepo.setPassports(personPassports);
-        personRepository.save(personFromRepo);
         return passportConverter.passportToPassportDto(passport);
     }
 
     @NonNull
     public List<PassportDto> getPersonPassports(@NonNull String id, @Nullable Status status) {
-        final List<PassportDto> personPassportList = new ArrayList<>();
         final Person personFromRepo = this.getPersonById(id);
-        personFromRepo.getPassports().forEach(passport ->
-                personPassportList.add(passportConverter.passportToPassportDto(passport)));
-        return personPassportList.stream()
-                .filter(passportDto ->
-                        passportDto
-                                .getStatus()
-                                .equals(Optional.ofNullable(status).orElse(Status.ACTIVE).toString()))
-                .collect(Collectors.toList());
+        log.debug("Finding a person's passport using id {} and status {}", id, status);
+        return passportRepository.findByPersonId(personFromRepo.getId())
+                .stream()
+                .filter(passport -> passport.getStatus().equals(Optional.ofNullable(status).orElse(Status.ACTIVE)))
+                .map(passportConverter::passportToPassportDto)
+                .toList();
     }
 
     private Person getPersonById(@NonNull String id) {
+        log.debug("Getting a person by id {}", id);
         final Person personFromRepo = personRepository.findById(id);
         if (personFromRepo == null) {
+            log.warn("Person with id {} is not found", id);
             throw new RecordNotFoundException("Person is not found!");
         }
         return personFromRepo;
